# riffle

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  azure-sink-ckpt.json
src/: cli_create.rs  cli_demo.rs  cli_enable_cdf.rs  cli_sink.rs  cli_stream.rs  config.rs  consumer.rs  dashboard.html  lib.rs  log_layer.rs  main.rs  maintenance.rs  producer.rs  sample_data.rs  sink.rs  source_eventhub.rs  state.rs  tables_inspect.rs  transform_rust.rs  util.rs  web.rs
